@@ -1,6 +1,7 @@
 package com.example.controller.master;
 
 import com.example.dto.request.CasteRequestDTO;
+import com.example.dto.response.ApiResponse;
 import com.example.dto.response.CasteResponseDTO;
 import com.example.model.Caste;
 import com.example.model.Religion;
@@ -10,7 +11,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/admins/{adminId}/castes")
@@ -21,93 +21,155 @@ public class CasteController {
 
     // ================= CREATE =================
     @PostMapping
-    public CasteResponseDTO create(@PathVariable Long adminId,
-                                   @Valid @RequestBody CasteRequestDTO dto) {
+    public ApiResponse<CasteResponseDTO> create(
+            @PathVariable Long adminId,
+            @Valid @RequestBody CasteRequestDTO dto) {
 
-        Caste saved = casteService.create(mapToEntity(dto), adminId);
-        return mapToResponse(saved);
+        Caste saved = casteService.create(
+                mapToEntity(dto),
+                adminId
+        );
+
+        return ApiResponse.<CasteResponseDTO>builder()
+                .success(true)
+                .message("Caste created successfully.")
+                .data(mapToResponse(saved))
+                .build();
     }
-
     // ================= GET BY ID =================
     @GetMapping("/{id}")
-    public CasteResponseDTO getById(@PathVariable Long adminId,
-                                    @PathVariable Long id) {
+    public ApiResponse<CasteResponseDTO> getById(
+            @PathVariable Long adminId,
+            @PathVariable Long id) {
 
-        return mapToResponse(casteService.getById(id, adminId));
+        Caste caste = casteService.getById(id, adminId);
+
+        return ApiResponse.<CasteResponseDTO>builder()
+                .success(true)
+                .message("Caste retrieved successfully.")
+                .data(mapToResponse(caste))
+                .build();
     }
 
     // ================= GET ALL =================
     @GetMapping
-    public List<CasteResponseDTO> getAll(@PathVariable Long adminId) {
+    public ApiResponse<List<CasteResponseDTO>> getAll(
+            @PathVariable Long adminId) {
 
-        return casteService.getAll(adminId)
+        List<CasteResponseDTO> castes = casteService.getAll(adminId)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<CasteResponseDTO>>builder()
+                .success(true)
+                .message("Castes retrieved successfully.")
+                .data(castes)
+                .build();
     }
 
     // ================= GET ACTIVE =================
     @GetMapping("/active")
-    public List<CasteResponseDTO> getActive(@PathVariable Long adminId) {
+    public ApiResponse<List<CasteResponseDTO>> getActive(
+            @PathVariable Long adminId) {
 
-        return casteService.getActive(adminId)
+        List<CasteResponseDTO> activeCastes = casteService.getActive(adminId)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+                .toList();
 
+        return ApiResponse.<List<CasteResponseDTO>>builder()
+                .success(true)
+                .message("Active castes retrieved successfully.")
+                .data(activeCastes)
+                .build();
+    }
     // ================= GET BY RELIGION =================
     @GetMapping("/religion/{religionId}")
-    public List<CasteResponseDTO> getByReligion(@PathVariable Long adminId,
-                                                @PathVariable Long religionId) {
+    public ApiResponse<List<CasteResponseDTO>> getByReligion(
+            @PathVariable Long adminId,
+            @PathVariable Long religionId) {
 
-        return casteService.getByReligion(religionId, adminId)
+        List<CasteResponseDTO> castes = casteService.getByReligion(religionId, adminId)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<CasteResponseDTO>>builder()
+                .success(true)
+                .message("Castes retrieved successfully by religion.")
+                .data(castes)
+                .build();
     }
 
     // ================= GET ACTIVE BY RELIGION =================
     @GetMapping("/religion/{religionId}/active")
-    public List<CasteResponseDTO> getActiveByReligion(@PathVariable Long adminId,
-                                                      @PathVariable Long religionId) {
+    public ApiResponse<List<CasteResponseDTO>> getActiveByReligion(
+            @PathVariable Long adminId,
+            @PathVariable Long religionId) {
 
-        return casteService.getActiveByReligion(religionId, adminId)
+        List<CasteResponseDTO> activeCastes = casteService
+                .getActiveByReligion(religionId, adminId)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+                .toList();
 
+        return ApiResponse.<List<CasteResponseDTO>>builder()
+                .success(true)
+                .message("Active castes retrieved successfully by religion.")
+                .data(activeCastes)
+                .build();
+    }
     // ================= SEARCH =================
     @GetMapping("/search")
-    public List<CasteResponseDTO> search(@PathVariable Long adminId,
-                                         @RequestParam String keyword) {
+    public ApiResponse<List<CasteResponseDTO>> search(
+            @PathVariable Long adminId,
+            @RequestParam String keyword) {
 
-        return casteService.search(keyword, adminId)
+        List<CasteResponseDTO> castes = casteService.search(keyword, adminId)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<CasteResponseDTO>>builder()
+                .success(true)
+                .message("Castes searched successfully.")
+                .data(castes)
+                .build();
     }
 
     // ================= UPDATE =================
     @PutMapping("/{id}")
-    public CasteResponseDTO update(@PathVariable Long adminId,
-                                   @PathVariable Long id,
-                                   @Valid @RequestBody CasteRequestDTO dto) {
+    public ApiResponse<CasteResponseDTO> update(
+            @PathVariable Long adminId,
+            @PathVariable Long id,
+            @Valid @RequestBody CasteRequestDTO dto) {
 
-        Caste updated = casteService.update(id, mapToEntity(dto), adminId);
-        return mapToResponse(updated);
+        Caste updated = casteService.update(
+                id,
+                mapToEntity(dto),
+                adminId
+        );
+
+        return ApiResponse.<CasteResponseDTO>builder()
+                .success(true)
+                .message("Caste updated successfully.")
+                .data(mapToResponse(updated))
+                .build();
     }
-
     // ================= DELETE =================
     @DeleteMapping("/{id}")
-    public String delete(@PathVariable Long adminId,
-                         @PathVariable Long id) {
+    public ApiResponse<String> delete(
+            @PathVariable Long adminId,
+            @PathVariable Long id) {
 
         casteService.delete(id, adminId);
-        return "Caste deleted successfully";
-    }
 
+        return ApiResponse.<String>builder()
+                .success(true)
+                .message("Caste deleted successfully.")
+                .build();
+    }
     // ================= MAPPERS =================
 
     private Caste mapToEntity(CasteRequestDTO dto) {
@@ -146,4 +208,45 @@ public class CasteController {
 
         return dto;
     }
+    @GetMapping("/deleted")
+    public ApiResponse<List<CasteResponseDTO>> getDeleted(
+            @PathVariable Long adminId) {
+
+        List<CasteResponseDTO> deleted = casteService.getDeleted(adminId)
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
+
+        return ApiResponse.<List<CasteResponseDTO>>builder()
+                .success(true)
+                .message("Deleted castes retrieved successfully.")
+                .data(deleted)
+                .build();
+    }
+    @PutMapping("/restore/{id}")
+    public ApiResponse<CasteResponseDTO> restore(
+            @PathVariable Long adminId,
+            @PathVariable Long id) {
+
+        Caste restored = casteService.restore(id);
+
+        return ApiResponse.<CasteResponseDTO>builder()
+                .success(true)
+                .message("Caste restored successfully.")
+                .data(mapToResponse(restored))
+                .build();
+    }
+    @DeleteMapping("/hard-delete/{id}")
+    public ApiResponse<String> hardDelete(
+            @PathVariable Long adminId,
+            @PathVariable Long id) {
+
+        casteService.hardDelete(id);
+
+        return ApiResponse.<String>builder()
+                .success(true)
+                .message("Caste permanently deleted successfully.")
+                .build();
+    }
+    
 }
