@@ -1,125 +1,264 @@
 package com.example.controller.master;
 
 import com.example.dto.request.DisabilityStatusRequestDto;
+import com.example.dto.response.ApiResponse;
 import com.example.dto.response.DisabilityStatusResponseDto;
 import com.example.model.Admin;
 import com.example.model.DisabilityStatus;
 import com.example.service.DisabilityStatusService;
 import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/api/master/disability-statuses")
+@RequestMapping("/api/disability-statuses")
+@RequiredArgsConstructor
 public class DisabilityStatusController {
 
     private final DisabilityStatusService disabilityStatusService;
 
-    public DisabilityStatusController(DisabilityStatusService disabilityStatusService) {
-        this.disabilityStatusService = disabilityStatusService;
-    }
+    // ================= CREATE =================
 
-    // ✅ Create
     @PostMapping
-    public DisabilityStatusResponseDto create(@Valid @RequestBody DisabilityStatusRequestDto dto) {
-        DisabilityStatus entity = mapToEntity(dto);
-        return mapToResponse(disabilityStatusService.create(entity));
+    public ApiResponse<DisabilityStatusResponseDto> create(
+            @Valid @RequestBody DisabilityStatusRequestDto dto) {
+
+        DisabilityStatus saved = disabilityStatusService.create(mapToEntity(dto));
+
+        return ApiResponse.<DisabilityStatusResponseDto>builder()
+                .success(true)
+                .message("Disability status created successfully.")
+                .data(mapToResponse(saved))
+                .build();
     }
 
-    // 🔄 Update
-    @PutMapping("/{id}")
-    public DisabilityStatusResponseDto update(@PathVariable Long id,
-                                              @Valid @RequestBody DisabilityStatusRequestDto dto) {
-        DisabilityStatus entity = mapToEntity(dto);
-        return mapToResponse(disabilityStatusService.update(id, entity));
-    }
+    // ================= GET BY ID =================
 
-    // ❌ Delete
-    @DeleteMapping("/{id}")
-    public String delete(@PathVariable Long id) {
-        disabilityStatusService.delete(id);
-        return "Disability status deleted successfully";
-    }
-
-    // 🔍 Get by ID
     @GetMapping("/{id}")
-    public DisabilityStatusResponseDto getById(@PathVariable Long id) {
-        return disabilityStatusService.getById(id)
-                .map(this::mapToResponse)
-                .orElseThrow(() -> new RuntimeException("Disability status not found"));
+    public ApiResponse<DisabilityStatusResponseDto> getById(
+            @PathVariable Long id) {
+
+        DisabilityStatus disabilityStatus = disabilityStatusService.getById(id);
+
+        return ApiResponse.<DisabilityStatusResponseDto>builder()
+                .success(true)
+                .message("Disability status retrieved successfully.")
+                .data(mapToResponse(disabilityStatus))
+                .build();
     }
 
-    // 🔍 Get all
+    // ================= GET ALL =================
+
     @GetMapping
-    public List<DisabilityStatusResponseDto> getAll() {
-        return disabilityStatusService.getAll()
+    public ApiResponse<List<DisabilityStatusResponseDto>> getAll() {
+
+        List<DisabilityStatusResponseDto> list = disabilityStatusService.getAll()
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<DisabilityStatusResponseDto>>builder()
+                .success(true)
+                .message("Disability statuses retrieved successfully.")
+                .data(list)
+                .build();
     }
 
-    // 🔍 Active
+    // ================= GET ACTIVE =================
+
     @GetMapping("/active")
-    public List<DisabilityStatusResponseDto> getActive() {
-        return disabilityStatusService.getActive()
+    public ApiResponse<List<DisabilityStatusResponseDto>> getActive() {
+
+        List<DisabilityStatusResponseDto> list = disabilityStatusService.getActive()
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<DisabilityStatusResponseDto>>builder()
+                .success(true)
+                .message("Active disability statuses retrieved successfully.")
+                .data(list)
+                .build();
     }
 
-    // 🔍 Inactive
+    // ================= GET INACTIVE =================
+
     @GetMapping("/inactive")
-    public List<DisabilityStatusResponseDto> getInactive() {
-        return disabilityStatusService.getInactive()
+    public ApiResponse<List<DisabilityStatusResponseDto>> getInactive() {
+
+        List<DisabilityStatusResponseDto> list = disabilityStatusService.getInactive()
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<DisabilityStatusResponseDto>>builder()
+                .success(true)
+                .message("Inactive disability statuses retrieved successfully.")
+                .data(list)
+                .build();
     }
 
-    // 🔍 By Admin
+    // ================= GET BY ADMIN =================
+
     @GetMapping("/admin/{adminId}")
-    public List<DisabilityStatusResponseDto> getByAdmin(@PathVariable Long adminId) {
-        return disabilityStatusService.getByAdmin(adminId)
+    public ApiResponse<List<DisabilityStatusResponseDto>> getByAdmin(
+            @PathVariable Long adminId) {
+
+        List<DisabilityStatusResponseDto> list = disabilityStatusService
+                .getByAdmin(adminId)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<DisabilityStatusResponseDto>>builder()
+                .success(true)
+                .message("Disability statuses retrieved successfully.")
+                .data(list)
+                .build();
     }
 
-    // 🔍 Active by Admin
+    // ================= GET ACTIVE BY ADMIN =================
+
     @GetMapping("/admin/{adminId}/active")
-    public List<DisabilityStatusResponseDto> getActiveByAdmin(@PathVariable Long adminId) {
-        return disabilityStatusService.getActiveByAdmin(adminId)
+    public ApiResponse<List<DisabilityStatusResponseDto>> getActiveByAdmin(
+            @PathVariable Long adminId) {
+
+        List<DisabilityStatusResponseDto> list = disabilityStatusService
+                .getActiveByAdmin(adminId)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<DisabilityStatusResponseDto>>builder()
+                .success(true)
+                .message("Active disability statuses retrieved successfully.")
+                .data(list)
+                .build();
     }
 
-    // 🔍 Search
+    // ================= SEARCH =================
+
     @GetMapping("/search")
-    public List<DisabilityStatusResponseDto> search(@RequestParam String keyword) {
-        return disabilityStatusService.search(keyword)
+    public ApiResponse<List<DisabilityStatusResponseDto>> search(
+            @RequestParam String keyword) {
+
+        List<DisabilityStatusResponseDto> list = disabilityStatusService.search(keyword)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<DisabilityStatusResponseDto>>builder()
+                .success(true)
+                .message("Disability statuses searched successfully.")
+                .data(list)
+                .build();
     }
 
-    // 🔍 Search by Admin
+    // ================= SEARCH BY ADMIN =================
+
     @GetMapping("/admin/{adminId}/search")
-    public List<DisabilityStatusResponseDto> searchByAdmin(@PathVariable Long adminId,
-                                                           @RequestParam String keyword) {
-        return disabilityStatusService.searchByAdmin(adminId, keyword)
+    public ApiResponse<List<DisabilityStatusResponseDto>> searchByAdmin(
+            @PathVariable Long adminId,
+            @RequestParam String keyword) {
+
+        List<DisabilityStatusResponseDto> list = disabilityStatusService
+                .searchByAdmin(adminId, keyword)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<DisabilityStatusResponseDto>>builder()
+                .success(true)
+                .message("Disability statuses searched successfully.")
+                .data(list)
+                .build();
     }
 
-    // =========================
-    // 🔁 MAPPING METHODS
-    // =========================
+    // ================= UPDATE =================
+
+    @PutMapping("/{id}")
+    public ApiResponse<DisabilityStatusResponseDto> update(
+            @PathVariable Long id,
+            @Valid @RequestBody DisabilityStatusRequestDto dto) {
+
+        DisabilityStatus updated = disabilityStatusService.update(
+                id,
+                mapToEntity(dto)
+        );
+
+        return ApiResponse.<DisabilityStatusResponseDto>builder()
+                .success(true)
+                .message("Disability status updated successfully.")
+                .data(mapToResponse(updated))
+                .build();
+    }
+
+    // ================= DELETE =================
+
+    @DeleteMapping("/{id}")
+    public ApiResponse<String> delete(
+            @PathVariable Long id,
+            @RequestParam Long deletedBy) {
+
+        disabilityStatusService.delete(id, deletedBy);
+
+        return ApiResponse.<String>builder()
+                .success(true)
+                .message("Disability status deleted successfully.")
+                .build();
+    }
+
+    // ================= GET DELETED =================
+
+    @GetMapping("/deleted")
+    public ApiResponse<List<DisabilityStatusResponseDto>> getDeleted() {
+
+        List<DisabilityStatusResponseDto> list = disabilityStatusService.getDeleted()
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
+
+        return ApiResponse.<List<DisabilityStatusResponseDto>>builder()
+                .success(true)
+                .message("Deleted disability statuses retrieved successfully.")
+                .data(list)
+                .build();
+    }
+
+    // ================= RESTORE =================
+
+    @PutMapping("/restore/{id}")
+    public ApiResponse<DisabilityStatusResponseDto> restore(
+            @PathVariable Long id) {
+
+        DisabilityStatus restored = disabilityStatusService.restore(id);
+
+        return ApiResponse.<DisabilityStatusResponseDto>builder()
+                .success(true)
+                .message("Disability status restored successfully.")
+                .data(mapToResponse(restored))
+                .build();
+    }
+
+    // ================= HARD DELETE =================
+
+    @DeleteMapping("/hard-delete/{id}")
+    public ApiResponse<String> hardDelete(
+            @PathVariable Long id) {
+
+        disabilityStatusService.hardDelete(id);
+
+        return ApiResponse.<String>builder()
+                .success(true)
+                .message("Disability status permanently deleted successfully.")
+                .build();
+    }
+    // ================= MAPPERS =================
 
     private DisabilityStatus mapToEntity(DisabilityStatusRequestDto dto) {
+
         DisabilityStatus entity = new DisabilityStatus();
 
         Admin admin = new Admin();
@@ -127,13 +266,21 @@ public class DisabilityStatusController {
 
         entity.setAdmin(admin);
         entity.setValue(dto.getValue());
-        entity.setIsActive(dto.getIsActive());
+
+        entity.setIsActive(
+                dto.getIsActive() != null
+                        ? dto.getIsActive()
+                        : true
+        );
 
         return entity;
     }
 
-    private DisabilityStatusResponseDto mapToResponse(DisabilityStatus entity) {
-        DisabilityStatusResponseDto dto = new DisabilityStatusResponseDto();
+    private DisabilityStatusResponseDto mapToResponse(
+            DisabilityStatus entity) {
+
+        DisabilityStatusResponseDto dto =
+                new DisabilityStatusResponseDto();
 
         dto.setId(entity.getId());
         dto.setValue(entity.getValue());
@@ -141,7 +288,9 @@ public class DisabilityStatusController {
         dto.setCreatedAt(entity.getCreatedAt());
         dto.setUpdatedAt(entity.getUpdatedAt());
 
-        dto.setAdminId(entity.getAdminId());
+        if (entity.getAdmin() != null) {
+            dto.setAdminId(entity.getAdmin().getId());
+        }
 
         return dto;
     }
